<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share To IRC</string>
    <string name="server_name">Server Name</string>
    <string name="host_address">Address</string>
    <string name="host_port">Port</string>
    <string name="ssl">SSL</string>
    <string name="nick">Nick</string>
    <string name="server_password">Server Password</string>
    <string name="channel_list">Channels (e.g. \'#chan1 #chan2\')</string>
    <string name="save">Save</string>
    <string name="google_play_services_error">Please install the Google Play Services package</string>
    <string name="select_account_to_edit">Select an account to edit its details</string>
    <string name="account_updated">Account updated</string>
    <string name="error_connecting">Error connecting to server</string>
    <string name="no_text_to_share">No text to share</string>
    <string name="quit_message">Brought to you by Share To IRC</string>
    <string name="share_success">Successfully shared to IRC</string>
    <string name="sharing">Sharing&#8230;</string>
    <string name="add_account">Add account</string>
    <string name="delete">Delete</string>

</resources>